--- a/main.html
+++ b/main.html
@@ -8,6 +8,18 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<nav>
+		<ul>
+			<li><a href = "https://media.istockphoto.com/id/890693290/photo/labrador-puppy-sits-alone-on-the-grass.webp?b=1&s=612x612&w=0&k=20&c=2LZOC8U4qt1M6tibIYA0za3V1xlO2xpT_ttoALqcxIg=">link1</a></li>
+			<li><a href = "https://media.istockphoto.com/id/890693290/photo/labrador-puppy-sits-alone-on-the-grass.webp?b=1&s=612x612&w=0&k=20&c=2LZOC8U4qt1M6tibIYA0za3V1xlO2xpT_ttoALqcxIg=">link1</a></li>
+			<li><a href = "https://media.istockphoto.com/id/890693290/photo/labrador-puppy-sits-alone-on-the-grass.webp?b=1&s=612x612&w=0&k=20&c=2LZOC8U4qt1M6tibIYA0za3V1xlO2xpT_ttoALqcxIg=">link1</a></li>
+		</ul>
+	</nav>
+
+	<header> 3 random audios</header>
+	<a href="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3"/>
+	<a href="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg"/>
+	<a href="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3"/>	
     <script type="text/javascript" src="./script.js">
 </script>
 
