--- a/main.html
+++ b/main.html
@@ -10,9 +10,9 @@
 	<!-- the entire body must be written by student -->
 	<nav>
 		<ul>
-			<li><a href = "https://media.istockphoto.com/id/890693290/photo/labrador-puppy-sits-alone-on-the-grass.webp?b=1&s=612x612&w=0&k=20&c=2LZOC8U4qt1M6tibIYA0za3V1xlO2xpT_ttoALqcxIg=">link1</a></li>
-			<li><a href = "https://media.istockphoto.com/id/890693290/photo/labrador-puppy-sits-alone-on-the-grass.webp?b=1&s=612x612&w=0&k=20&c=2LZOC8U4qt1M6tibIYA0za3V1xlO2xpT_ttoALqcxIg=">link1</a></li>
-			<li><a href = "https://media.istockphoto.com/id/890693290/photo/labrador-puppy-sits-alone-on-the-grass.webp?b=1&s=612x612&w=0&k=20&c=2LZOC8U4qt1M6tibIYA0za3V1xlO2xpT_ttoALqcxIg=">link1</a></li>
+			<li><a href="https://media.istockphoto.com/id/890693290/photo/labrador-puppy-sits-alone-on-the-grass.webp?b=1&s=612x612&w=0&k=20&c=2LZOC8U4qt1M6tibIYA0za3V1xlO2xpT_ttoALqcxIg=">Link 1</a></li>
+			<li><a href="https://media.istockphoto.com/id/890693290/photo/labrador-puppy-sits-alone-on-the-grass.webp?b=1&s=612x612&w=0&k=20&c=2LZOC8U4qt1M6tibIYA0za3V1xlO2xpT_ttoALqcxIg=">Link 2</a></li>
+			<li><a href="https://media.istockphoto.com/id/890693290/photo/labrador-puppy-sits-alone-on-the-grass.webp?b=1&s=612x612&w=0&k=20&c=2LZOC8U4qt1M6tibIYA0za3V1xlO2xpT_ttoALqcxIg=">Link 3</a></li>
 		</ul>
 	</nav>
 
